Rework the getValueAs() method.